--- a/src/styles-xl.css
+++ b/src/styles-xl.css
@@ -1,8 +1,8 @@
-.header-container-xl {
-	/*background-size: contain;*/
-}
-
 .header-container-xl h1 span {
 	line-height: 1.75em;
-	font-size: 2.5em;
+	font-size: 2.3em;
+}
+
+.header-container-xl h1 span:after {
+	content: '(xl)';
 }
